from welcome to index
idex

--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
     <strong>BOT GRABBER </strong> installation.
     </p>
     <p>Select the service you want below below:</p>
-<button id="unblocking-btn">
-    <a href="unblocking.html">
-        UNBLOCKING
-    </a>
-</button>
-<button id="bot-grabber-btn">
+
     <a href="bot grabber.html">
-    BOT GRABBER
+        <button>BOT GRABBER</button>
+    </button>
    </a>
-</button>
+   <a href="unblocking.html">
+    <button > UNBLOCK</button>
+</a>
+
    <style>
     body {
         background-color: #f0f0f0;
@@ -55,8 +54,11 @@
         background-color: grey;
         padding: 8px;
         margin: 5px;
+        margin-left: 80PX;
         border: 1px solid;
-        border-radius: 10px;
+        height: 50px;
+        width: 150px;
+        border-radius:3px;
         box-shadow:  0 2px 4px rgba;
     }
     button:hover {
